# Solen-Web

./: CONTRIBUTING.md  LICENSE.md  README.md  design_system.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  scratch.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddressBar.tsx  ContextMenu.tsx  DownloadManager.tsx  SettingsPage.tsx  Sidebar.tsx  TabItem.tsx  WorkspaceModal.tsx  WorkspaceSelector.tsx
src/hooks/: useDownloadManager.ts  useShortcuts.ts  useTranslation.ts
src/i18n/: translations.ts
src/store/: useBrowserStore.ts
