[package]
name = "solen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "solen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linux-only: proxy server dependencies
[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies"] }
warp = "0.3"
tokio = { version = "1", features = ["rt", "net", "macros"] }
